test/functions/iterators/errors/const-violation.good
const-violation.chpl:3: error: cannot yield by 'ref', 'y' is 'const'
